Added ResourceReader, changed some names.